--- a/src/main/resources/META-INF/resources/css/stylesheet.css
+++ b/src/main/resources/META-INF/resources/css/stylesheet.css
@@ -1,3 +1,42 @@
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 8px 24px;
+    border-bottom: 1px solid #CCC
+
+}
+h1 {
+    font-family: 'Baskerville Old Face', serif;
+    align-items: center;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin: auto
+}
+h2 {
+
+}
+p {
+    font-family: 'Taviraj', serif;
+}
+header .icon {
+    height: 32px;
+}
+.icon.search {
+    fill: black;
+    max-width: 32px;
+}
+.icon.filter {
+    fill: black;
+
+}
+.card {
+    border-radius: 20px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.12);
+}
 .navigation-bar {
     background-color: #fff;
     border-radius: 3px;
@@ -7,8 +46,8 @@
     bottom: 0%;
     width: 100%;
     opacity: 1;
-    border-top: 1px solid var(--text, #CCC);
-box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+    border-top: 1px solid  #CCC;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
 }
 .navigation-bar .list-items {
     display: flex;
