--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+<html lang="de">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../META-INF/resources/css/stylesheet.css">
+        {#include stylesheetLinks}{/}
     </head>
     <body>
-        <header>
-            
-        </header>
+    <header>
+        <svg class="icon search" width="25" height="25" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg">
+            <path d="M24.6558 21.6141L19.7881 16.7464C19.5684 16.5267 19.2706 16.4046 18.9581 16.4046H18.1623C19.5098 14.6812 20.3105 12.5134 20.3105 10.1553C20.3105 4.54545 15.7651 0 10.1553 0C4.54545 0 0 4.54545 0 10.1553C0 15.7651 4.54545 20.3105 10.1553 20.3105C12.5134 20.3105 14.6812 19.5098 16.4046 18.1623V18.9581C16.4046 19.2706 16.5267 19.5684 16.7464 19.7881L21.6141 24.6558C22.073 25.1147 22.8152 25.1147 23.2692 24.6558L24.6509 23.2741C25.1099 22.8152 25.1099 22.073 24.6558 21.6141ZM10.1553 16.4046C6.70345 16.4046 3.90587 13.612 3.90587 10.1553C3.90587 6.70345 6.69857 3.90587 10.1553 3.90587C13.6071 3.90587 16.4046 6.69856 16.4046 10.1553C16.4046 13.6071 13.612 16.4046 10.1553 16.4046Z"/>
+        </svg>
+        <h1>Stücke</h1>
+        <svg class = "icon filter" width="25" height="25" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg">
+            <path d="M23.8269 0H1.17324C0.132319 0 -0.392925 1.26299 0.344624 2.00054L9.37499 11.0323V21.0937C9.37499 21.4761 9.56156 21.8345 9.87485 22.0538L13.7811 24.7872C14.5517 25.3267 15.625 24.7799 15.625 23.8271V11.0323L24.6556 2.00054C25.3916 1.26445 24.87 0 23.8269 0Z"/>
+        </svg>
+    </header>
         <main>
-            
+            <h1>{plays.size}</h1>
+            {#for play in plays}
+            <div class="card">
+                <h2>{play.title}</h2>
+            </div>
+            {/for}
 
         </main>
         <footer>
-            <!--add a bottom navigation bar with 4 icons-->
             <nav class="navigation-bar">
                 <div class="list-items">
                     <div class="item active">
@@ -66,11 +72,8 @@
                         </a>
                     </div>
                 </div>
+            </nav>
         </footer>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
         <script src="" async defer></script>
     </body>
 </html>
