feat: added second designv2.html and css to visualize Performance card element

--- a/src/main/resources/templates/designv2.html
+++ b/src/main/resources/templates/designv2.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="../META-INF/resources/css/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../META-INF/resources/css/stylesheetv2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Taviraj&display=swap" rel="stylesheet">
@@ -28,7 +28,11 @@
     <main>
         <div class="card">
             <div class="card-content">
-                <img class="image" src="../META-INF/resources/media/sg221017196.jpeg" alt="">
+                <div class="image" alt="">
+                    <span id="month">Mai</span>
+                    <span id="day">02</span>
+                    <span id="time">19:30</span>
+                </div>
                 <div class="text">
                     <div class="card-title-row">
                         <div class="card-title">Istanbul</div>
@@ -122,6 +126,4 @@
             </div>
         </nav>
     </footer>
-</body>
-
-</html>
+</body></html>
