--- a/src/main/resources/META-INF/resources/css/stylesheet.css
+++ b/src/main/resources/META-INF/resources/css/stylesheet.css
@@ -5,22 +5,28 @@
     font-style: normal;
     font-weight: 500;
 }
-body {
 
+html,
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+main {
+    flex-grow: 1;
+    overflow-y: auto;
 }
 /*Header*/
 header {
-    top:0;
-    position: sticky;
-    z-index: 10;
     background-color: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 8px 8px 24px;
+    padding: 8px 8px 8px 16px;
     border-bottom: 1px solid #CCC
 }
-
 h1 {
     font-family: 'Baskerville Old Face', serif;
     align-items: center;
@@ -144,31 +150,41 @@ header .icon {
     padding-left: 8px;
     padding-right: 8px;
 }
-
-.button {
-    border-radius: 5px;
-    background: #9747FF;
+.showMore{
+    margin: 8px;
     display: flex;
+    border-radius: 20px;
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.12);
     justify-content: center;
-    align-items: center;
-    padding: 8px;
+    background: #9747FF;
+
+}
+.showMore button.button {
+    width: 100%;
+    background: #9747FF;
+    align-self: stretch;
     text-align: center;
-    font-size: 10px;
+    font-size: 13px;
     font-style: normal;
     font-weight: 500;
+    border: #9747FF;
     color: #fff;
+    border-radius: 20px;
+    padding: 8px;
+}
+.showMore button.button:hover {
+    background: #D7B9FF;
+    border: #D7B9FF;
+    color: #9747FF;
 }
 
 /*navigation*/
 .navigation-bar {
+    flex-shrink: 0;
     background-color: #fff;
     border-radius: 3px;
     min-height: 30px;
-    overflow: hidden;
-    position: fixed;
-    bottom: 0%;
     width: 100%;
-    opacity: 1;
     border-top: 1px solid #CCC;
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
 }
@@ -186,17 +202,12 @@ header .icon {
     flex-direction: column;
     justify-content: center;
     max-width: 25px;
-    position: relative;
-    z-index: 2;
 }
 
 .navigation-bar .list-items .item .link {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
-    position: relative;
-    z-index: 2;
 }
 
 .navigation-bar .list-items .item .link .icon {
