--- a/src/main/resources/META-INF/resources/css/stylesheet.css
+++ b/src/main/resources/META-INF/resources/css/stylesheet.css
@@ -50,7 +50,220 @@ header .icon {
     fill: black;
 
 }
+/*filterOverlay*/
+#filterOverlay {
+    position: absolute;
+    top: calc(100% + 8px);
+    right: 0;
+    transform: translate(0, 0);
+    z-index: 9999;
+    display: none;
+}
 
+#filterOverlay .bubble {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 16px;
+    border-radius: 4px;
+    background-color: #fff;
+    color: #000;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.16);
+}
+
+#filterOverlay .bubble::before {
+    content: '';
+    position: absolute;
+    top: -8px;
+    right: 16px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 8px 8px 8px;
+    border-color: transparent transparent #fff transparent;
+}
+#filterOverlay .filter-section {
+    color: #CCC;
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 8px;
+}
+
+#filterOverlay .button-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 8px;
+}
+#filterOverlay .bubble .close-icon {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    color: red;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.close:hover {
+    opacity: 0.8;
+}
+#filterOverlay .filter-button {
+    border-radius: 10px;
+    border: 0.5px solid #888;
+    background: #FFF;
+    color: #CCC;
+    padding: 8px 16px;
+    font-size: 12px;
+    font-weight: 500;
+    cursor: pointer;
+}
+.filter-checkbox {
+    display: none;
+}
+
+.filter-checkbox + .filter-label {
+    display: inline-block;
+    padding: 8px 16px;
+    border-radius: 10px;
+    border: 0.5px solid #888;
+    background: #FFF;
+    color: #CCC;
+    cursor: pointer;
+}
+
+.filter-checkbox:checked + .filter-label {
+    border-color: #9747FF;
+    color: #9747FF;
+}
+
+#filterOverlay .confirm-button {
+    margin-top: 16px;
+    width: 100%;
+    background: #9747FF;
+    align-self: stretch;
+    text-align: center;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 500;
+    border: none;
+    color: #FFF;
+    border-radius: 20px;
+    padding: 8px;
+}
+
+#filterOverlay .confirm-button:hover {
+    background: #D7B9FF;
+    color: #9747FF;
+}
+
+.filter-section {
+    display: block;
+    margin-top: 16px;
+    font-weight: 300;
+    color: #888;
+}
+/*search-Overlay*/
+#searchOverlay {
+    position: absolute;
+    top: calc(100% + 8px);
+    left: 0;
+    transform: translate(0, 0);
+    z-index: 9999;
+    display: none;
+}
+
+#searchOverlay .bubble::before {
+    content: '';
+    position: absolute;
+    top: -8px;
+    left: 16px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 8px 8px 8px;
+    border-color: transparent transparent #fff transparent;
+}
+
+#searchOverlay .bubble {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 16px;
+    border-radius: 4px;
+    background-color: #fff;
+    color: #000;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.16);
+}
+
+#searchOverlay .search-section {
+    color: #CCC;
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 8px;
+}
+
+#searchOverlay .button-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 8px;
+}
+
+#searchOverlay .bubble .close-icon {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    color: red;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.close:hover {
+    opacity: 0.8;
+}
+
+#searchOverlay .search-button {
+    border-radius: 10px;
+    border: 0.5px solid #888;
+    background: #fff;
+    color: #ccc;
+    padding: 8px 16px;
+    font-size: 12px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+#searchOverlay .search-input {
+    border-radius: 10px;
+    border: 0.5px solid #888;
+    background: #fff;
+    color: #000;
+    padding: 8px 16px;
+    font-size: 12px;
+    font-weight: 500;
+}
+
+#searchOverlay .confirm-button {
+    margin-top: 16px;
+    width: 100%;
+    background: #9747FF;
+    align-self: stretch;
+    text-align: center;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 500;
+    border: none;
+    color: #fff;
+    border-radius: 20px;
+    padding: 8px;
+}
+
+#searchOverlay .confirm-button:hover {
+    background: #d7b9ff;
+    color: #9747FF;
+}
 /*card*/
 .card {
     margin: 8px;
