--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -16,64 +16,30 @@
 </head>
 
 <body>
-    <header>
-        <svg class="icon search" width="25" height="25" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg">
-            <path d="M24.6558 21.6141L19.7881 16.7464C19.5684 16.5267 19.2706 16.4046 18.9581 16.4046H18.1623C19.5098 14.6812 20.3105 12.5134 20.3105 10.1553C20.3105 4.54545 15.7651 0 10.1553 0C4.54545 0 0 4.54545 0 10.1553C0 15.7651 4.54545 20.3105 10.1553 20.3105C12.5134 20.3105 14.6812 19.5098 16.4046 18.1623V18.9581C16.4046 19.2706 16.5267 19.5684 16.7464 19.7881L21.6141 24.6558C22.073 25.1147 22.8152 25.1147 23.2692 24.6558L24.6509 23.2741C25.1099 22.8152 25.1099 22.073 24.6558 21.6141ZM10.1553 16.4046C6.70345 16.4046 3.90587 13.612 3.90587 10.1553C3.90587 6.70345 6.69857 3.90587 10.1553 3.90587C13.6071 3.90587 16.4046 6.69856 16.4046 10.1553C16.4046 13.6071 13.612 16.4046 10.1553 16.4046Z" />
+    <header class="details" style="background-image: url('../META-INF/resources/media/1400px_der_weg_zurueck_0411.jpg');">
+        <svg class="icon left" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 13 21">
+            <path d="M0.321857 9.72255L9.22301 0.821857C9.65215 0.392714 10.3483 0.392714 10.7774 0.821857L11.8157 1.86013C12.2444 2.28882 12.2449 2.98314 11.8176 3.41274L4.76304 10.4998L11.8171 17.5873C12.2449 18.0169 12.244 18.7112 11.8153 19.1399L10.777 20.1781C10.3478 20.6073 9.65169 20.6073 9.22255 20.1781L0.321857 11.277C-0.107286 10.8478 -0.107286 10.1517 0.321857 9.72255Z" fill="black" />
         </svg>
         <h1>Stücke</h1>
-        <svg class="icon filter" width="25" height="25" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg">
-            <path d="M23.8269 0H1.17324C0.132319 0 -0.392925 1.26299 0.344624 2.00054L9.37499 11.0323V21.0937C9.37499 21.4761 9.56156 21.8345 9.87485 22.0538L13.7811 24.7872C14.5517 25.3267 15.625 24.7799 15.625 23.8271V11.0323L24.6556 2.00054C25.3916 1.26445 24.87 0 23.8269 0Z" />
+        <svg class="icon heart" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 23 21">
+            <path d="M20.1322 2.62815C18.134 0.925872 15.0918 1.1869 13.1693 3.17061L13.1688 3.17108L12.2894 4.07732L11.5717 4.81681L10.8541 4.07732L9.97465 3.17108L9.9735 3.1699C8.05592 1.18737 5.00953 0.92551 3.01096 2.62842C0.653048 4.64122 0.52518 8.26769 2.63846 10.4529L20.1322 2.62815ZM20.1322 2.62815C22.4905 4.64094 22.6183 8.2675 20.5007 10.4527L20.5005 10.4529L11.8625 19.3722C11.6974 19.5426 11.4416 19.5426 11.2765 19.3722L2.63888 10.4534L20.1322 2.62815Z" stroke="black" stroke-width="2" />
         </svg>
+        <div class="card-content">
+            <img class="image" src="" alt="">
+            <div class="text">
+                <div class="card-title-row">
+                    <div class="card-title">Istanbul</div>
+                    <div class="chip">
+                        <div class="chip-content">will hin!</div>
+                    </div>
+                </div>
+
+                <div class="card-subtitle">Schauspiel - Theater am Domhof</div>
+                <div class="card-info">Dauer: 2 Stunden, 20 Minuten, eine Pause</div>
+            </div>
+        </div>
     </header>
     <main>
-        <div class="card">
-            <div class="card-content">
-                <img class="image" src="../META-INF/resources/media/sg221017196.jpeg" alt="">
-                <div class="text">
-                    <div class="card-title-row">
-                        <div class="card-title">Istanbul</div>
-                        <div class="chip">
-                            <div class="chip-content">will hin!</div>
-                        </div>
-                    </div>
-
-                    <div class="card-subtitle">Schauspiel</div>
-                    <div class="card-info">als nächstes am 19.06.23, 19:00</div>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-content">
-                <img class="image" src="../META-INF/resources/media/sg221017196.jpeg" alt="">
-                <div class="text">
-                    <div class="card-title-row">
-                        <div class="card-title">Istanbul</div>
-                        <div class="chip">
-                            <div class="chip-content">will hin!</div>
-                        </div>
-                    </div>
-
-                    <div class="card-subtitle">Schauspiel</div>
-                    <div class="card-info">als nächstes am 19.06.23, 19:00</div>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-content">
-                <img class="image" src="../META-INF/resources/media/sg221017196.jpeg" alt="">
-                <div class="text">
-                    <div class="card-title-row">
-                        <div class="card-title">Istanbul</div>
-                        <div class="chip">
-                            <div class="chip-content">will hin!</div>
-                        </div>
-                    </div>
-
-                    <div class="card-subtitle">Schauspiel</div>
-                    <div class="card-info">als nächstes am 19.06.23, 19:00</div>
-                </div>
-            </div>
-        </div>
     </main>
     <footer>
         <nav class="navigation-bar">
@@ -122,6 +88,4 @@
             </div>
         </nav>
     </footer>
-</body>
-
-</html>
+</body></html>
